# multiperiod-2e

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  noxfile.py  pyproject.toml
notebooks/Compute Layer/: Playground v3 - compute layers.ipynb
notebooks/Pixel Aggregation/OLD/: Playground v3 - pixel aggregation process_MEDIANA.ipynb
notebooks/Pixel_Aggregation/OLD/: Playground v3 - pixel aggregation process_GRANDE.ipynb  Playground v3 - pixel aggregation process_PEQUEÑA-Copy1.ipynb
notebooks/Scenario_Generatio/: Scenario-Generatio-v1.ipynb
notebooks/Scenario_Generation/: Creation-Scenario-Expected.ipynb  Creation-Scenario-v1.ipynb  Generation-Params-Distribution.ipynb  Scenario-Generation-v1.ipynb  Validate-Scesario-Params-Distribution.ipynb
src/app/: classes.py  constants.py  get_data.py  models.py  utils.py
src/app/discretization/: grid.py
src/app/plot_grid/: plot_grid.py
test/: test_placeholder.py
