[tool.poetry]
name = "clustering-agregation model"
version = "0.0.0"
description = "this project aims to clustering and aggregation process about pixels"
authors = ["phurtac <pitehrh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
scipy = "^1.11.1"
geopandas = "^0.13.2"
folium = "^0.14.0"
jinja2 = "^3.1.2"
jupyter = "^1.0.0"
ipython = "^8.14.0"
scikit-learn = "^1.3.0"
gurobipy = "^10.0.2"
geopy = "^2.3.0"
seaborn = "^0.12.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
isort = "^5.12.0"
black = "^23.7.0"
pylint = "^2.17.5"
flake8 = "^6.1.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
mypy = "^1.4.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
